--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
   font-size: clamp(2.5rem, 6vw, 6rem);
   text-align: center;
   color: #FA75AF;
-  padding: 0 20px;
+  padding: 20px;
   
 }
 h2 {
