--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ h1 {
   text-align: center;
   color: #FA75AF;
   padding: 20px;
-margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0px;
   
 }
 h2 {
